implement new websocket handling for generalconf

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -516,7 +516,7 @@
 			$("[type='checkbox']").bootstrapSwitch();
 			
 			$(hyperion).on("open",function(event){
-				updateServerInfo();
+				requestServerInfo();
 			});
 
 			$(hyperion).on("cmd-serverinfo",function(event){
