--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -90,7 +90,7 @@
 					<span class="icon-bar"></span>
 				</button>
 
-				<a class="navbar-brand" href="index.html"><img src="img/hyperion/hyperionlogo.png" alt="Redefine ambient light!"></a>
+				<a class="navbar-brand" href="/"><img src="img/hyperion/hyperionlogo.png" alt="Redefine ambient light!"></a>
 
 			</div>
 			<!-- /.navbar-header -->
@@ -112,83 +112,6 @@
 					<!-- /.dropdown-language -->
 				</li>
 				<!-- /.dropdown -->
-				<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-						<i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
-					</a>
-					<ul class="dropdown-menu dropdown-tasks">
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 1</strong>
-										<span class="pull-right text-muted">40% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-											<span class="sr-only">40% Complete (success)</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 2</strong>
-										<span class="pull-right text-muted">20% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-											<span class="sr-only">20% Complete</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 3</strong>
-										<span class="pull-right text-muted">60% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-											<span class="sr-only">60% Complete (warning)</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 4</strong>
-										<span class="pull-right text-muted">80% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-											<span class="sr-only">80% Complete (danger)</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a class="text-center" href="#">
-								<strong>See All Tasks</strong>
-								<i class="fa fa-angle-right"></i>
-							</a>
-						</li>
-					</ul>
-					<!-- /.dropdown-tasks -->
 				</li>
 				<!-- /.dropdown -->
 				<li class="dropdown">
@@ -268,65 +191,36 @@
 				</li>
 				<!-- /.dropdown -->
 			</ul>
-			<!-- /.navbar-top-links -->
+			<!-- /.navbar-top-left -->
 
 			<div class="navbar-default sidebar" role="navigation">
 				<div class="sidebar-nav navbar-collapse">
 					<ul class="nav" id="side-menu">
-						<li class="sidebar-search">
-							<div class="input-group custom-search-form">
-								<input type="text" class="form-control" placeholder="Search...">
-								<span class="input-group-btn">
-									<button class="btn btn-default" type="button">
-										<i class="fa fa-search"></i>
-									</button>
-								</span>
-							</div>
-							<!-- /input-group -->
+						<li> <a class="active" id="load_dashboard"><i class="fa fa-dashboard fa-fw"></i><span lang="en" data-lang-token="main_menu_dashboard_token">Dashboard</span></a> </li>
+						<li>
+							<a class="inactive"><i class="fa fa-cog fa-fw"></i><span lang="en" data-lang-token="main_menu_configuration_token">Configuration</span><span class="fa arrow"></span></a>
+							<ul class="nav nav-second-level">
+								<li> <a class="inactive" id="load_confGeneral"><i class="fa fa-play-circle-o fa-fw"></i><span lang="en" data-lang-token="main_menu_general_conf_token">General</span></a> </li>
+								<li> <a class="inactive" id="load_confKodi"><i class="fa fa-play-circle-o fa-fw"></i><span lang="en" data-lang-token="main_menu_kodiwatch_token">Kodi Watch</span></a> </li>
+								<li> <a class="inactive" id="load_huebridge"><i class="fa fa-cog fa-fw"></i><span lang="en" data-lang-token="main_menu_huebridge_token">Hue Bridge</span></a> </li>
+							</ul>
 						</li>
 						<li>
-							<a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i><span lang="en" data-lang-token="main_menu_dashboard_token">Dashboard</span></a>
+							<a class="inactive" href="#"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="main_menu_remotecontrol_token">Remote Control</span><span class="fa arrow"></span></a>
+							<ul class="nav nav-second-level">
+								<li> <a class="inactive" id="load_lighttest"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="main_menu_colors_token">Colors</span></a> </li>
+								<li> <a class="inactive" id="load_effects"><i class="fa fa-certificate fa-fw"></i><span lang="en" data-lang-token="main_menu_effects_token">Effects</span></a> </li>
+								<li> <a class="inactive" id="load_components"><i class="fa fa-list fa-fw"></i><span lang="en" data-lang-token="main_menu_component_token">Components</span></a> </li>
+								<li> <a class="inactive" id="load_input_selection"><i class="fa fa-certificate fa-fw"></i><span lang="en" data-lang-token="main_menu_input_selection_token">Input Selection</span></a> </li>
+							</ul>
 						</li>
-							<li>
-								<a class="inactive" href="#"><i class="fa fa-cog fa-fw"></i><span lang="en" data-lang-token="main_menu_configuration_token">Configuration</span><span class="fa arrow"></span></a>
-								<ul class="nav nav-second-level">
-									<li>
-										<a class="inactive" href="#" id="load_confGeneral"><i class="fa fa-play-circle-o fa-fw"></i><span lang="en" data-lang-token="main_menu_general_conf_token">General</span></a>
-									</li>
-									<li>
-										<a class="inactive" href="#" id="load_confKodi"><i class="fa fa-play-circle-o fa-fw"></i><span lang="en" data-lang-token="main_menu_kodiwatch_token">Kodi Watch</span></a>
-									</li>
-									<li>
-										<a class="inactive" href="#" id="load_huebridge"><i class="fa fa-cog fa-fw"></i><span lang="en" data-lang-token="main_menu_huebridge_token">Hue Bridge</span></a>
-									</li>
-								</ul>
-							</li>
-							<li>
-								<a class="inactive" href="#"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="main_menu_remotecontrol_token">Remote Control</span><span class="fa arrow"></span></a>
-								<ul class="nav nav-second-level">
-									<li>
-										<a class="inactive" href="#" id="load_lighttest"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="main_menu_colors_token">Colors</span></a>
-									</li>
-									<li>
-										<a class="inactive" href="#" id="load_effects"><i class="fa fa-certificate fa-fw"></i><span lang="en" data-lang-token="main_menu_effects_token">Effects</span></a>
-									</li>
-									<li>
-										<a class="inactive" href="#" id="load_components"><i class="fa fa-list fa-fw"></i><span lang="en" data-lang-token="main_menu_component_token">Components</span></a>
-									</li>
-								</ul>
-							</li>
-							<li>
-								<a class="inactive" href="#" id="load_support"><i class="fa fa-info fa-fw"></i><span lang="en" data-lang-token="main_menu_support_token">Support</span></a>
-							</li>
-							<li>
-								<a class="inactive" href="#"><i class="fa fa-cog fa-fw"></i><span lang="en" data-lang-token="main_menu_system_token">System</span><span class="fa arrow"></span></a>
-								<ul class="nav nav-second-level">
-									<li>
-										<a class="inactive" href="#" id="load_update"><i class="fa fa-download fa-fw"></i><span lang="en" data-lang-token="main_menu_update_token">Update</span></a>
-									</li>
-								</ul>
-							</li>
-
+						<li> <a class="inactive" id="load_support"><i class="fa fa-info fa-fw"></i><span lang="en" data-lang-token="main_menu_support_token">Support</span></a> </li>
+						<li>
+							<a class="inactive"><i class="fa fa-cog fa-fw"></i><span lang="en" data-lang-token="main_menu_system_token">System</span><span class="fa arrow"></span></a>
+							<ul class="nav nav-second-level">
+								<li> <a class="inactive" id="load_update"><i class="fa fa-download fa-fw"></i><span lang="en" data-lang-token="main_menu_update_token">Update</span></a> </li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 				<!-- /.sidebar-collapse -->
@@ -335,146 +229,25 @@
 		</nav>
 
 		<!-- Page Content -->
-		<div id="page-wrapper">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-lg-12">
-						<h1 class="page-header">Dashboard</h1>
-						<div class="introd">
-							<h4 lang="en" data-lang-token="dashboard_label_intro">The dashboard give you a quick overview about the status of Hyperion and show you the latest news of the Hyperion Blog.</h4>
-						</div>
-						<hr>
-							<div class="col-lg-4">
-								<div class="panel panel-default">
-									<div class="panel-heading">
-										<i class="fa fa-info-circle fa-fw"></i>
-										<span lang="en" data-lang-token="dashboard_label_infobox_title">Information</span>
-									</div>
-									<div class="panel-body">
-										<table class="table borderless">
-											<tbody>
-												<tr>
-													<td lang="en" data-lang-token="dashboard_label_infobox_currenthyp">Your Hyperion version:</td>
-													<td id="currentversion">unknown</td>
-												</tr>
-												<tr>
-													<td lang="en" data-lang-token="dashboard_label_infobox_latesthyp">Latest version:</td>
-													<td id="latestversion">unknown</td>
-												</tr>
-												<tr>
-													<td lang="en" data-lang-token="dashboard_label_infobox_leddevice">LED type:</td>
-													<td id="dash_leddevice">unknown</td>
-												</tr>
-												<tr>
-													<td lang="en" data-lang-token="dashboard_label_infobox_device">Device:</td>
-													<td id="dash_systeminfo"></td>
-												</tr>
-											</tbody>
-										</table>
-										<hr>
-										<span id="versioninforesult"></span>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="panel panel-default">
-									<div class="panel-heading">
-										<i class="fa fa-eye fa-fw"></i>
-										<span lang="en" data-lang-token="dashboard_label_componentbox_title">Components status</span>
-									</div>
-									<div class="panel-body">
-										  <table class="table">
-											<thead>
-												<tr>
-													<th>Component</th>
-													<th>Status</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Kodi Watch</td>
-													<td><i class="fa fa-circle component-on"></i></td>
-												</tr>
-													<tr>
-													<td>Blackborder</td>
-													<td><i class="fa fa-circle component-off"></i></td>
-												</tr>
-												<tr>
-													<td>Booteffect</td>
-													<td><i class="fa fa-circle component-off"></i></td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-5">
-								<div class="panel panel-default">
-									<div class="panel-heading">
-										<i class="fa fa-newspaper-o fa-fw"></i>
-										<span lang="en" data-lang-token="dashboard_label_newsbox_title">Latest blog posts</span>
-									</div>
-									<div class="panel-body">
-
-									</div>
-								</div>
-							</div>
-
-					</div>
-					<!-- /.col-lg-12 -->
-				</div>
-				<!-- /.row -->
-			</div>
-			<!-- /.container-fluid -->
-		</div>
-		<!-- /#page-wrapper -->
+		<div id="page-wrapper" />
 
 	</div>
 	<!-- /#wrapper -->
 
-	<!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-	<!-- Modal content-->
-	<div class="modal-content">
-	  <div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal">&times;</button>
-		<h4 class="modal-title">Modal Test and port changer</h4>
-	  </div>
-	  <div class="modal-body">
-		<p>Input the JSON port you want to connect and press reload</p>
-		<form class="form-inline">
-			<div class="form-group">
-				<label for="port">Your JSON Port:</label>
-				<input type="number" min="100" max="65535" value="19444" class="form-control" id="json_port">
+	<div id="error_dialog" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+			<!-- Modal content-->
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title" />
+				</div>
+			<div class="modal-body" />
+			<div class="modal-footer">
+				<button type="button" class="btn btn-primary" data-dismiss="modal">Okay!</button>
 			</div>
-		</form>
-	  </div>
-	  <div class="modal-footer">
-		<button type="button" onclick="button_reloaddata()" class="btn btn-primary" data-dismiss="modal">Reload!</button>
-	  </div>
+		</div>
 	</div>
-  </div>
-</div>
-
-<div id="con_error_modal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-		<!-- Modal content-->
-	<div class="modal-content" id="con_error_modal">
-	  <div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal">&times;</button>
-		<h4 class="modal-title">Oh noes! Something went wrong!</h4>
-	  </div>
-	  <div class="modal-body">
-		<p>We are sorry, the json port was not found. Just try another one!</p>
-	  </div>
-	  <div class="modal-footer">
-		<button type="button" class="btn btn-primary" data-dismiss="modal">Okay!</button>
-	  </div>
-	</div>
-  </div>
-</div>
 
 	<!-- Bootstrap Core JavaScript -->
 	<script src="js/lib/bootstrap.min.js"></script>
@@ -487,14 +260,16 @@
 	<script>
 		$(document).ready( function() {
 			initWebSocket();
-			loadNavContent("#load_lighttest","lighttest");
-			loadNavContent("#load_effects","effects");
-			loadNavContent("#load_components","remote_components");
-			loadNavContent("#load_huebridge","huebridge");
-			loadNavContent("#load_support","support");
-			loadNavContent("#load_confKodi","kodiconf");
-			loadNavContent("#load_update","update");
-			loadNavContent("#load_confGeneral","generalconf");
+			bindNavToContent("#load_dashboard","dashboard",true);
+			bindNavToContent("#load_lighttest","lighttest");
+			bindNavToContent("#load_effects","effects");
+			bindNavToContent("#load_components","remote_components");
+			bindNavToContent("#load_input_selection","input_selection");
+			bindNavToContent("#load_huebridge","huebridge");
+			bindNavToContent("#load_support","support");
+			bindNavToContent("#load_confKodi","kodiconf");
+			bindNavToContent("#load_update","update");
+			bindNavToContent("#load_confGeneral","generalconf");
 
 			//Change all Checkboxes to Switches
 			$("[type='checkbox']").bootstrapSwitch();
@@ -522,14 +297,23 @@
 					$('#currentversion').html(' V'+currentVersion);
 					$('#latestversion').html(' V'+latestVersion);
 
-					if ( cleanCurrentVersion < cleanLatestVersion ) {
+					if ( cleanCurrentVersion < cleanLatestVersion )
+					{
 						$('#versioninforesult').html('<div lang="en" data-lang-token="dashboard_message_infobox_updatewarning" style="margin:0px;" class="alert alert-warning">A newer version of Hyperion is available!</div>');
-						}
-					else{
+					}
+					else
+					{
 						$('#versioninforesult').html('<div  lang="en" data-lang-token="dashboard_message_infobox_updatesuccess" style="margin:0px;" class="alert alert-success">You run the latest version of Hyperion.</div>');
-						}
+					}
 				});
+			}); // end cmd-serverinfo
+			
+			$(hyperion).on("error",function(event){
+				$('#error_dialog .modal-title').html("error");
+				$('#error_dialog .modal-body').html(event.reason);
+				$('#error_dialog').modal('show');
 			});
+
 	});
 
 	$(function(){
