--- a/assets/webconfig/content/lighttest.html
+++ b/assets/webconfig/content/lighttest.html
@@ -25,12 +25,13 @@
 			$('#cp2').colorpicker({
 				format: 'rgb',
 
-				colorSelectors: {'default': '#777777',
+				colorSelectors: {
+					'default': '#777777',
 					'primary': '#337ab7',
 					'success': '#5cb85c',
-					'info': '#5bc0de',
+					'info'   : '#5bc0de',
 					'warning': '#f0ad4e',
-					'danger': '#d9534f'
+					'danger' : '#d9534f'
 					},
 				customClass: 'colorpicker-2x',
 				sliders: {
