fix general conf unrigister ledcolors request, when not on leds.html

--- a/assets/webconfig/content/generalconf.html
+++ b/assets/webconfig/content/generalconf.html
@@ -17,6 +17,7 @@
 
 
 <script>
+/*
 	function removeAdvanced(obj,searchStack)
 	{
 		searchStack = [];
@@ -35,17 +36,33 @@
 		});
 		return false;
 	}
-
+*/
 	$(hyperion).on("cmd-config-getschema", function(event) {
 		parsedConfSchemaJSON = event.response.result;
-
 		// remove all "advanced" options from schema
 		//removeAdvanced(parsedConfSchemaJSON, []); // not working atm
 		//console.log(JSON.stringify(parsedConfSchemaJSON));
 		schema = parsedConfSchemaJSON.properties;
+		schema_blackborderdetector = schema.blackborderdetector;
+		schema_color = schema.color,
+		schema_device = schema.device,
+		schema_effects = schema.effects,
+		schema_forwarder = schema.forwarder,
+		schema_framegrabber = schema.framegrabber,
+		//schema_grabber-v4l2 = schema.grabber-v4l2,
+		schema_initialEffect = schema.initialEffect,
+		schema_kodiVideoChecker = schema.kodiVideoChecker,
+		schema_smoothing = schema.smoothing,
+		schema_logger = schema.logger,
+		schema_jsonServer = schema.jsonServer,
+		schema_protoServer = schema.protoServer,
+		schema_boblightServer = schema.boblightServer,
+		schema_udpListener = schema.udpListener,
+		schema_webConfig = schema.webConfig
 
 		var element = document.getElementById('editor_holder');
 		//JSONEditor.defaults.options.theme = 'bootstrap3';
+		
 		var general_conf_editor = new JSONEditor(element,{
 			theme: 'bootstrap3',
 			disable_collapse: 'true',
@@ -56,22 +73,22 @@
 			schema: {
 				title:' ',
 				properties: {
-					schema.blackborderdetector,
-					schema.color,
-					schema.device,
-					schema.effects,
-					schema.forwarder,
-					schema.framegrabber,
-					//schema.grabber-v4l2,
-					schema.initialEffect,
-					schema.kodiVideoChecker,
-					schema.smoothing,
-					schema.logger,
-					schema.jsonServer,
-					schema.protoServer,
-					schema.boblightServer,
-					schema.udpListener,
-					schema.webConfig
+					schema_blackborderdetector,
+					schema_color,
+					schema_device,
+					schema_effects,
+					schema_forwarder,
+					schema_framegrabber,
+					//schema_grabber-v4l2,
+					schema_initialEffect,
+					schema_kodiVideoChecker,
+					schema_smoothing,
+					schema_logger,
+					schema_jsonServer,
+					schema_protoServer,
+					schema_boblightServer,
+					schema_udpListener,
+					schema_webConfig
 				}
 			}
 		});
@@ -82,7 +99,7 @@
 
 		document.getElementById('submit').addEventListener('click',function() {
 			// Get the value from the editor
-			console.log(general_conf_editor.getValue());
+			//console.log(general_conf_editor.getValue());
 		});
     //  $("[type='checkbox']").bootstrapSwitch();
 	});
