implement connection lost page

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -237,6 +237,8 @@
 	</div>
 	<!-- /#wrapper -->
 
+	<div id="container_connection_lost" style="display:none" />
+
 	<div id="error_dialog" class="modal fade" role="dialog">
 		<div class="modal-dialog">
 			<!-- Modal content-->
