add js action for connection lost

--- a/assets/webconfig/content/connection_lost.html
+++ b/assets/webconfig/content/connection_lost.html
@@ -4,3 +4,13 @@
 	</div>
 </div>
 
+<script>
+function connectionLostAction()
+{
+	// demo code to see if this works
+	$("#wrapper").css("margin","auto");
+	$("#wrapper").css("background-color","#BBBBBB");
+}
+</script>
+
+
